@@ -15,8 +15,8 @@ if [ "$1" = "list" ]; then
   exit 1;
 fi
 
-if [ -x $INITDIR/$1 ]; then
-    ($RC_DIR/*$1 $2 2>&1)
+if [ -x "$INITDIR/$1" ]; then
+    ("$RC_DIR/*$1 $2" 2>&1)
 else
     echo "No such Service: $1 in $INITDIR";
     exit 1
