@@ -682,6 +682,7 @@
 62) More checks data in dhcpd configure script.<br>
 63) Goahead: fix some services restart.<br>
 64) Add reinit LAN ports in direct dns relay mode, need for renew params at clients (if disable dnsmasq and emable dhcp server).<br>
+65) init.d fix screen bug in some scripts.<br>
 
 <br><br>
 <b>For support see:</b><br>
